--- a/Proyecto/public/estilos de pagina sobre desarrollo web.css
+++ b/Proyecto/public/estilos de pagina sobre desarrollo web.css
@@ -1,10 +1,61 @@
-.caja{
-  width: 400px;
-  height: 400px;
-  border: 2px solid #000;
+body{
+  background-color: papayawhip;
+}
+
+h1{
+  text-align: center;
+  text-shadow: 4px 4px 4px gray;
+}
+
+.boton1{
+  background-color: #18B2E9;
+}
+
+.caja1{
+  width: 500px;
+  height: 150px;
+  border: 4px solid black;
+  box-shadow: 4px 4px 4px gray ;
   padding: 20px;
   margin: 10px;
   border-radius: 5px;
   background-color: #f9f9f9;
+  text-align: center;
+
 }
 
+
+.cajas2{
+  display: flex;
+  justify-content: center;
+}
+
+
+.caja2{
+  width: 300px;
+  height: 350px;
+  border: 4px solid  rgb(90, 214, 90);
+  box-shadow: 4px 4px 4px black ;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  text-align: center;
+}
+.cajas3{
+  display: flex;
+  justify-content: left;
+}
+
+
+.caja3{
+  width: 300px;
+  height: 350px;
+  border: 4px solid rgb(90, 214, 90);
+  box-shadow: 4px 4px 4px black ;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  text-align: center;
+}
